Add Hero section to home page - not finished

--- a/src/routes/index.astro
+++ b/src/routes/index.astro
@@ -1,5 +1,10 @@
 ---
+import Hero from '../components/sections/index/Hero.astro'
 import Layout from '../layouts/Layout.astro'
 ---
 
-<Layout title="ooo3UI" />
+<Layout title="ooo3UI">
+	<main>
+		<Hero />
+	</main>
+</Layout>
