--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ const { title } = Astro.props
 ---
 
 <!doctype html>
-<html lang="en" class="company">
+<html lang="en" class="black">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -18,7 +18,7 @@ const { title } = Astro.props
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-bg">
+  <body class="bg-base-100">
     <slot />
   </body>
 </html>
