--- a/src/routes/index.astro
+++ b/src/routes/index.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro'
 ---
 
 <Layout title="ooo3UI">
-	<main>
-		<Hero />
-	</main>
+  <main class="px-4">
+    <Hero />
+  </main>
 </Layout>
