Revert "Delete astrolicious i18n and use default Astro i18n"
This reverts commit e6cd6a2dce483588a984121d8681b3188c1fcd3a.

--- a/src/components/sections/index/Hero.astro
+++ b/src/components/sections/index/Hero.astro
@@ -1,9 +1,6 @@
 ---
-import { getLangFromUrl, useTranslations } from '../../../i18n/utils'
+import { t } from 'i18n:astro'
 import BrightText from '../../ui/BrightText.astro'
-
-const lang = getLangFromUrl(Astro.url)
-const t = useTranslations(lang)
 ---
 
 <section class="min-h-dvh flex flex-col items-center justify-center gap-y-12">
