--- a/src/components/sections/index/Hero.astro
+++ b/src/components/sections/index/Hero.astro
@@ -23,14 +23,14 @@ const t = useTranslations(lang)
   <div class="flex flex-col gap-2 w-full">
     <a
       type="button"
-      href="/components"
+      href={`/${lang}/components/`}
       class="px-6 py-3 rounded-xl font-bold text-text w-full text-sm text-center bg-base-200"
     >
       {t('home.hero.cta')}
     </a>
     <a
       type="button"
-      href="/docs"
+      href={`/${lang}/docs/`}
       class="px-6 py-3 rounded-xl font-bold text-text w-full text-sm text-center bg-neutral"
     >
       {t('home.hero.cta2')}
